@@ -1,3 +1,7 @@
+Jun 14, 2007
+
+  * FIXED: Saving literal(rdf:'XMLLiteral').
+
 Jun 9, 2007
 
   * FIXED: Avoid type error in literal indexing code when asserting
